footer-width-alignment-fix-done

--- a/blog-page/blog.css
+++ b/blog-page/blog.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-
+body {
+  font-family: "Inter", sans-serif;
+}
 .main-section {
   max-width: 1200px;
   padding: 40px;
@@ -8,7 +10,6 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
 }
 .navbar {
   max-width: 1100px;
@@ -93,24 +94,30 @@
   border-radius: 25px;
   text-align: center;
 }
-.navbar-middle-section > ul li a{
-    color: inherit;
-    text-decoration: none;
+.navbar-middle-section > ul li a {
+  color: inherit;
+  text-decoration: none;
 }
 .footer-section {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1100px;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
   margin: auto;
+  max-width: 1100px;
+  margin-top: 50px;
 }
 .footer-section ul {
   list-style: none;
 }
-.footer-section ul li:first-child {
-  font-weight: bold;
-  margin: 10px 0;
+.footer-section ul li {
+  color: gray;
+  margin-bottom: 15px;
 }
-.mobile-sidebar{
+.footer-section ul li:first-child {
+  color: black;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+.mobile-sidebar {
   display: none;
 }
 
@@ -120,10 +127,10 @@
     grid-template-columns: auto auto;
     gap: 30px;
   }
-  .navbar{
+  .navbar {
     max-width: 850px;
   }
-  .footer-section{
+  .footer-section {
     max-width: 850px;
   }
 }
@@ -138,7 +145,6 @@
     grid-template-columns: auto;
     gap: 10px;
   }
-  
   .navbar-middle-section {
     display: none;
   }
@@ -148,63 +154,67 @@
   .hamburger {
     display: block;
   }
+   .footer-icon{
+    margin: 20px 0;
+  }
   .footer-section {
+    display: flex ;
     flex-direction: column;
-    margin: 0 30px;
+    margin: 30px 50px;
   }
   .footer-section ul {
     padding: 0;
   }
   .mobile-sidebar {
-  display: block;
-  width: 300px;
-  z-index: 10;
-  position: fixed;
-  background-color: red;
-  right: 0;
-  flex-direction: column;
-  backdrop-filter: blur(30px) saturate(2);
-  -webkit-backdrop-filter: blur(30px) saturate(2);
-  padding-inline: 0;
-  padding-block: 13px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  transition: 2.2s cubic-bezier(0.36, -0.01, 0, 0.77);
-  height: 100%;
-}
-.mobile-sidebar.closed {
-  margin-right: -200px;
-  width: 0;
-}
-.sidebar-close-icon {
-  height: 25px;
-}
-.sidebar-header-section {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-}
-.sidebar-middle-section {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  margin: 10px 0;
-}
-.sidebar-middle-section ul {
-  list-style: none;
-  padding: 0;
-}
-.sidebar-middle-section ul li {
-  padding: 5px;
-}
-.sidebar-middle-section ul li a {
-  text-decoration: none;
-  color: inherit;
-}
-.sidebar-projects-dropdown {
-  border: none;
-  background: transparent;
-}
+    display: block;
+    width: 300px;
+    z-index: 10;
+    position: fixed;
+    background-color: red;
+    right: 0;
+    flex-direction: column;
+    backdrop-filter: blur(30px) saturate(2);
+    -webkit-backdrop-filter: blur(30px) saturate(2);
+    padding-inline: 0;
+    padding-block: 13px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: 2.2s cubic-bezier(0.36, -0.01, 0, 0.77);
+    height: 100%;
+  }
+  .mobile-sidebar.closed {
+    margin-right: -200px;
+    width: 0;
+  }
+  .sidebar-close-icon {
+    height: 25px;
+  }
+  .sidebar-header-section {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+  }
+  .sidebar-middle-section {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 10px 0;
+  }
+  .sidebar-middle-section ul {
+    list-style: none;
+    padding: 0;
+  }
+  .sidebar-middle-section ul li {
+    padding: 5px;
+  }
+  .sidebar-middle-section ul li a {
+    text-decoration: none;
+    color: inherit;
+  }
+  .sidebar-projects-dropdown {
+    border: none;
+    background: transparent;
+  }
 }
