--- a/blog-post/blog-post.css
+++ b/blog-post/blog-post.css
@@ -3,13 +3,15 @@
   padding: 0;
   margin: 0;
 }
+body {
+  font-family: "Inter", sans-serif;
+}
 .main-section {
   max-width: 1100px;
   margin: auto;
   min-height: 100vh;
   height: 100%;
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
   position: relative;
 }
 .blog-cover {
@@ -81,7 +83,7 @@ p {
   font-size: 12px;
   font-weight: 100;
   padding: 5px 10px;
-  margin: 5px 0;
+  margin: 20px 0;
   border-radius: 25px;
   text-align: center;
 }
@@ -162,17 +164,23 @@ p {
   display: none;
 }
 .footer-section {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1100px;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
   margin: auto;
+  max-width: 1100px;
+  margin-top: 50px;
 }
 .footer-section ul {
   list-style: none;
 }
+.footer-section ul li {
+  color: gray;
+  margin-bottom: 15px;
+}
 .footer-section ul li:first-child {
+  color: black;
   font-weight: bold;
-  margin: 10px 0;
+  margin-bottom: 15px;
 }
 .mobile-sidebar {
   display: none;
@@ -278,9 +286,13 @@ p {
   .hamburger {
     display: block;
   }
+  .footer-icon{
+    margin: 20px 0;
+  }
   .footer-section {
+    display: flex ;
     flex-direction: column;
-    margin: 0 30px;
+    margin: 30px 50px;
   }
   .footer-section ul {
     padding: 0;
